se agrego un event listener para saber el id del estado

--- a/src/app/mapa/mapa.component.css
+++ b/src/app/mapa/mapa.component.css
@@ -1,10 +1,26 @@
+.container{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
 svg{
     fill: #A5E6BA;
     stroke: black;
     stroke-width: 1.2px;
+    
 }
+path{
 
+
+    z-index: 100;
+}
 path:hover{
     fill: #9AC6C5;
     cursor: pointer;
+    padding: 0px;
+}
+
+.size{
+    transform: scale(1.1);
 }
