--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<div class="estado"><h2>{{estado}}</h2></div>
-
-<app-mapa (newItemEvent)="NombreEstado($event)"></app-mapa>
+<div class="container">
+    
+    <app-mapa (newItemEvent)="NombreEstado($event)"></app-mapa>
+</div>
+<div class="info__estado">
+    <div class="estado"><h2>{{estado}}</h2></div>
+    
+</div>
