--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,18 @@
 .container{
     height: 100vh;
     width: 100%;
+    background: url('../assets/images/pueblosMagicos/TlaquepaqueFT.jpg');
+
+    margin:0px;
+    padding: 0px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+
 .estado{
     display: flex;
     flex-direction: row;
