--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,9 @@
 .container{
     height: 100vh;
     width: 100%;
-    background: url('../assets/images/pueblosMagicos/TlaquepaqueFT.jpg');
-
+    background: url('../assets/images/pueblosMagicos/cool-background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
     margin:0px;
     padding: 0px;
 
